--- a/test.ipynb
+++ b/test.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNDMxPqIeTymGoXbK4fOIn+",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/soc04112/ktcloud_genai/blob/main/test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,32 +12,32 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#학습환경 구성"
-      ],
       "metadata": {
         "id": "uwdD78XUjJQY"
-      }
+      },
+      "source": [
+        "#학습환경 구성"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        ">1. 파이썬 버전 확인"
-      ],
       "metadata": {
         "id": "9PmuvTyfjNXZ"
-      }
+      },
+      "source": [
+        ">1. 파이썬 버전 확인"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python version"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "7uQaf-UVllf9"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!python version"
+      ]
     },
     {
       "cell_type": "code",
@@ -68,17 +52,17 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "'/usr/bin/python3'"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "'/usr/bin/python3'"
+            ]
           },
+          "execution_count": 1,
           "metadata": {},
-          "execution_count": 1
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -89,9 +73,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(sys.path)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -99,16 +81,35 @@
         "id": "A5Fhe8UwFuuF",
         "outputId": "1b721725-17e6-4019-9b3b-ca4df062ed0f"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "['/content', '/env/python', '/usr/lib/python312.zip', '/usr/lib/python3.12', '/usr/lib/python3.12/lib-dynload', '', '/usr/local/lib/python3.12/dist-packages', '/usr/lib/python3/dist-packages', '/usr/local/lib/python3.12/dist-packages/IPython/extensions', '/root/.ipython']\n"
           ]
         }
+      ],
+      "source": [
+        "print(sys.path)\n",
+        "print(\"VCS\")"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNDMxPqIeTymGoXbK4fOIn+",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
