--- a/102-LLM-VSC에서 OpenAI Whisper 사용하기-완성.ipynb
+++ b/102-LLM-VSC에서 OpenAI Whisper 사용하기-완성.ipynb
@@ -107,16 +107,7 @@
    "metadata": {
     "id": "Ah_OTgncOYCw"
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2907229157.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mpython -m venv whisper-env\u001b[39m\n              ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "python -m venv whisper-env\n",
     "whisper-env\\Scripts\\activate"
@@ -147,16 +138,7 @@
    "metadata": {
     "id": "CyJDER2BEnQ5"
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (605289448.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mSet-ExecutionPolicy -Scope CurrentUser -ExecutionPolicy RemoteSigned\u001b[39m\n                               ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 터미널에서 실행한다.\n",
     "Set-ExecutionPolicy -Scope CurrentUser -ExecutionPolicy RemoteSigned"
@@ -215,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "id": "tjxo7oBvOD5M"
    },
@@ -257,11 +239,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "aywVF71vOERd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting git+https://github.com/openai/whisper.git\n",
+      "  Cloning https://github.com/openai/whisper.git to c:\\users\\user\\appdata\\local\\temp\\pip-req-build-lq51dhdd\n",
+      "  Resolved https://github.com/openai/whisper.git to commit c0d2f624c09dc18e709e37c2ad90c039a4eb72a2\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: finished with status 'done'\n",
+      "  Preparing metadata (pyproject.toml): started\n",
+      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Requirement already satisfied: more-itertools in c:\\python\\python313\\lib\\site-packages (from openai-whisper==20250625) (10.8.0)\n",
+      "Requirement already satisfied: numba in c:\\python\\python313\\lib\\site-packages (from openai-whisper==20250625) (0.62.0)\n",
+      "Requirement already satisfied: numpy in c:\\python\\python313\\lib\\site-packages (from openai-whisper==20250625) (2.3.3)\n",
+      "Requirement already satisfied: tiktoken in c:\\python\\python313\\lib\\site-packages (from openai-whisper==20250625) (0.11.0)\n",
+      "Requirement already satisfied: torch in c:\\python\\python313\\lib\\site-packages (from openai-whisper==20250625) (2.8.0)\n",
+      "Requirement already satisfied: tqdm in c:\\python\\python313\\lib\\site-packages (from openai-whisper==20250625) (4.67.1)\n",
+      "Requirement already satisfied: llvmlite<0.46,>=0.45.0dev0 in c:\\python\\python313\\lib\\site-packages (from numba->openai-whisper==20250625) (0.45.0)\n",
+      "Requirement already satisfied: regex>=2022.1.18 in c:\\python\\python313\\lib\\site-packages (from tiktoken->openai-whisper==20250625) (2025.9.18)\n",
+      "Requirement already satisfied: requests>=2.26.0 in c:\\python\\python313\\lib\\site-packages (from tiktoken->openai-whisper==20250625) (2.32.5)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\python\\python313\\lib\\site-packages (from requests>=2.26.0->tiktoken->openai-whisper==20250625) (3.4.3)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\python\\python313\\lib\\site-packages (from requests>=2.26.0->tiktoken->openai-whisper==20250625) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\python\\python313\\lib\\site-packages (from requests>=2.26.0->tiktoken->openai-whisper==20250625) (2.5.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\python\\python313\\lib\\site-packages (from requests>=2.26.0->tiktoken->openai-whisper==20250625) (2025.8.3)\n",
+      "Requirement already satisfied: filelock in c:\\python\\python313\\lib\\site-packages (from torch->openai-whisper==20250625) (3.19.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.10.0 in c:\\python\\python313\\lib\\site-packages (from torch->openai-whisper==20250625) (4.15.0)\n",
+      "Requirement already satisfied: sympy>=1.13.3 in c:\\python\\python313\\lib\\site-packages (from torch->openai-whisper==20250625) (1.14.0)\n",
+      "Requirement already satisfied: networkx in c:\\python\\python313\\lib\\site-packages (from torch->openai-whisper==20250625) (3.5)\n",
+      "Requirement already satisfied: jinja2 in c:\\python\\python313\\lib\\site-packages (from torch->openai-whisper==20250625) (3.1.6)\n",
+      "Requirement already satisfied: fsspec in c:\\python\\python313\\lib\\site-packages (from torch->openai-whisper==20250625) (2025.9.0)\n",
+      "Requirement already satisfied: setuptools in c:\\python\\python313\\lib\\site-packages (from torch->openai-whisper==20250625) (80.9.0)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in c:\\python\\python313\\lib\\site-packages (from sympy>=1.13.3->torch->openai-whisper==20250625) (1.3.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\python\\python313\\lib\\site-packages (from jinja2->torch->openai-whisper==20250625) (3.0.2)\n",
+      "Requirement already satisfied: colorama in c:\\python\\python313\\lib\\site-packages (from tqdm->openai-whisper==20250625) (0.4.6)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  Running command git clone --filter=blob:none --quiet https://github.com/openai/whisper.git 'C:\\Users\\user\\AppData\\Local\\Temp\\pip-req-build-lq51dhdd'\n"
+     ]
+    }
+   ],
    "source": [
     "pip install git+https://github.com/openai/whisper.git"
    ]
@@ -284,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "gxVJoTioEnQ6",
     "outputId": "ff8659bd-1dcc-4b65-fbb8-7ebfbd32b2aa"
@@ -330,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "pKMISxcdEnQ6",
     "outputId": "290cbdc4-2352-419b-f9f5-2d024df27cbe"
@@ -390,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -437,19 +466,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "id": "NiyhvUZbEnQ7",
     "outputId": "08ce66b3-ae9e-44ee-9378-b026bbe82e3a"
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████| 461M/461M [00:04<00:00, 103MiB/s]\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -521,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "tZVhNEJqEnQ7",
     "outputId": "181d8446-9a03-4e71-8e7d-b7198280b22f"
@@ -554,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {
     "id": "5FR0RGINEnQ8",
     "outputId": "5f7e0e54-4cbe-4c5c-d668-bd36768d1c1e"
@@ -564,22 +586,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "실시간 음성 인식 시작 (Ctrl+C로 종료)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\python\\Python313\\Lib\\site-packages\\whisper\\transcribe.py:132: UserWarning: FP16 is not supported on CPU; using FP32 instead\n",
-      "  warnings.warn(\"FP16 is not supported on CPU; using FP32 instead\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📢 인식된 텍스트:  점심 먹었더니 배가 부르다\n",
+      "실시간 음성 인식 시작 (Ctrl+C로 종료)\n",
+      "📢 인식된 텍스트: \n",
+      "📢 인식된 텍스트:  점순의 먹은 라면은 맛있었다\n",
       "종료합니다.\n"
      ]
     }
